Trail forces (you can add wind, gravity...)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,9 @@
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "algorithm": "cpp",
+        "deque": "cpp",
+        "string": "cpp"
     }
 }
